add OnlyMainApp module

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <modules>
     <module>agent-learn</module>
     <module>app</module>
+    <module>only-main-app</module>
   </modules>
 
   <properties>
