--- a/agent-learn/pom.xml
+++ b/agent-learn/pom.xml
@@ -22,21 +22,25 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
+      <scope>provided</scope>
     </dependency>
     <!-- Log4j2 适配到slf4j -->
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
+      <scope>provided</scope>
     </dependency>
     <!-- Log4j2 核心组件 -->
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
+      <scope>provided</scope>
     </dependency>
     <!-- Log4j2 核心API -->
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
+      <scope>provided</scope>
     </dependency>
     <!-- Commons-IO -->
     <dependency>
@@ -49,22 +53,51 @@
 
   <build>
     <plugins>
+
+<!--      <plugin>-->
+<!--        <groupId>org.apache.maven.plugins</groupId>-->
+<!--        <artifactId>maven-jar-plugin</artifactId>-->
+<!--        <version>3.2.2</version>-->
+<!--        <configuration>-->
+<!--          <archive>-->
+<!--            <manifest>-->
+<!--              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>-->
+<!--            </manifest>-->
+<!--            <manifestEntries>-->
+<!--              <Premain-Class>cn.addenda.loglearn.LogLearnAgent</Premain-Class>-->
+<!--              <Can-Redefine-Classes>true</Can-Redefine-Classes>-->
+<!--              <Can-Retransform-Classes>true</Can-Retransform-Classes>-->
+<!--            </manifestEntries>-->
+<!--          </archive>-->
+<!--        </configuration>-->
+<!--      </plugin>-->
+
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.2.2</version>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.5.5</version>
         <configuration>
           <archive>
-            <manifest>
-              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-            </manifest>
             <manifestEntries>
               <Premain-Class>cn.addenda.loglearn.LogLearnAgent</Premain-Class>
               <Can-Redefine-Classes>true</Can-Redefine-Classes>
               <Can-Retransform-Classes>true</Can-Retransform-Classes>
             </manifestEntries>
           </archive>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
         </configuration>
+        <executions>
+          <execution>
+            <id>one_jar</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
@@ -116,7 +149,7 @@
                 <echo message="project.build.directory: ${project.build.directory}"/>
                 <mkdir dir="${project.basedir}/../dist"/>
                 <mkdir dir="${project.basedir}/../dist/lib/log"/>
-                <copy file="${project.build.directory}/${project.build.finalName}.jar"
+                <copy file="${project.build.directory}/${project.build.finalName}-jar-with-dependencies.jar"
                       tofile="${project.basedir}/../dist/agent-learn.jar"/>
                 <copy file="${project.basedir}/src/main/resources/log4j2.xml"
                       tofile="${project.basedir}/../dist/lib/log/log4j2.xml"/>
